app/styles/component_explorer-entity.scss
.project-explorer {
  width: 40%;
  height: 100%;
  position: relative;
  float: left;
}

.explorer-wrapper {
  width: 100%; 
  height: calc(100% - 43px);
  float: left;
  position: relative;
  .explorer {
    width: 100%;
    height: 40vw;
    min-height: 300px;
    position: relative;
  }
}

// class applied if node is on layer 2
.actionable {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 10;
  cursor: pointer;
}

.node.layer-1, .node.layer-2 {
  .content.type-star {
    background-color: rgba(250,250,0,.5);
  }
  .content.type-star > .text {
    color: #444;
  }
  .content.type-planet {
    background-color: rgba(0,250,100,.5);
  }
  .content.type-moon {
    background-color: rgba(100,150,100,.5);
  }
  .content.type-crater {
    background-color: rgba(100,150,100,.3);
  }
  .content {
    border: 1px solid rgba(0,0,0,.1);
  }
}
.node{
  position: absolute;
  // transform: rotate(45deg);
  margin-top: 80%;
  margin-left: 20%;
}
.node .content {
  position: relative;
  opacity: 0;
  border: none;
}
.node, .content {
  border-radius: 100%;
  transition: width $transitionLength, height $transitionLength, top $transitionLength, left $transitionLength, opacity $transitionLength, margin $transitionLength, background-color $transitionLength, transform $transitionLength, border $transitionLength;
  width: 0%;
  height: 0%;
  top: 0%;
  left: 0%;
}


.project-explorer {
  // properties to retain on top level
  .node.parent-blur {
    height: 100%;
    width: 100%;
    top: 0%;
    left: 0%;
    margin: 0%;
  }
  .node.parent-blur > .content {
    height: 100%;
    width: 100%;
    opacity: 1;
  }
  // origin - star layer
  .node.layer-1 {
    top: 50%;
    margin-top: -30%;
    left: 50%;
    margin-left: -30%;
    width: 60%;
    height: 60%;
    .content {
      width: 100%;
      height: 100%;
      opacity: 1;
    }
  }
  // origin - planet layer
  .node.layer-2 {
    width: 33.2%;
    height: 166.5%;
    top: -33.2%;
    left: 50%;
    margin-left: -17.5%;
    margin-top: 0%;
    pointer-events: none;
  }
  .node.layer-2 > .content {
    padding: 0px;
    width: 80%;
    height: 16%;
    top: 2%;
    left: 10%;
    opacity: 1;
    pointer-events: all;
  }
  // layer wrapper orders for use in rotations (irrelevant)
  // .layer-2.order-0 {
  //   transform: rotate(45deg);
  //   .content {
  //     transform: rotate(-45deg);
  //   }
  // }
  // .layer-2.order-1 {
  //   transform: rotate(90deg);
  //   .content {
  //     transform: rotate(-90deg);
  //   }
  // }
  // .layer-2.order-2 {
  //   transform: rotate(135deg);
  //   .content {
  //     transform: rotate(-135deg);
  //   }
  // }
  // .layer-2.order-3 {
  //   transform: rotate(180deg);
  //   .content {
  //     transform: rotate(-180deg);
  //   }
  // }
  // .layer-2.order-4 {
  //   transform: rotate(225deg);
  //   .content {
  //     transform: rotate(-225deg);
  //   }
  // }
  // .layer-2.order-5 {
  //   transform: rotate(270deg);
  //   .content {
  //     transform: rotate(-270deg);
  //   }
  // }
  // .layer-2.order-6 {
  //   transform: rotate(315deg);
  //   .content {
  //     transform: rotate(-315deg);
  //   }
  // }
  // .layer-2.order-7 {
  //   transform: rotate(0deg);
  //   .content {
  //     transform: rotate(0deg);
  //   }
  // }
}

.text {
  transition: all $transitionLength;
  text-align: center;
  font-family: 'Open Sans';
  color: rgba(0,0,0,0);
  padding: 2vw;
}
.layer-2 > .content > .text, .layer-1 > .content > .text {
  color: rgba(250,250,250,1);
}
.layer-2 > .content > .text {
  font-size: 1.7vw;
  padding: 1.7vw 0vw;
  font-weight: 100;
}
.layer-1 > .content > .text {
  font-size: 4vw;
  padding: 3vw 2vh;
  font-weight: 100;
}
@media all and (max-width: 780px) {
  .layer-2 > .content > .text {
    font-size: 13.3px;
    padding: 13.3px 0px;
    font-weight: 100;
  }
  .layer-1 > .content > .text {
    font-size: 31.3px;
    padding: 23.5px 15.5px;
    font-weight: 100;
  }
}

